--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ header {
 
 .heading > h4 {
   font-weight: 400;
-  font-size: 24px;
+  font-size: 23px;
 }
 
 .heading > h1 {
@@ -165,8 +165,8 @@ header {
 }
 
 .discription {
-  margin: 40px 25px 0 25px;
-  padding: 0 30px;
+  margin: 57px 25px 0 25px;
+  padding: 0px 30px;
   line-height: 25px;
   word-break: break-all;
   text-align: justify;
@@ -184,7 +184,7 @@ header {
   background-color: rgb(247, 247, 248);
   color: #272a31;
   font-weight: 900;
-  font-size: 30px;
+  font-size: 24px;
   line-height: 40px;
 }
 
